fix issue box overlapping

--- a/server/sonar-web/src/main/less/components/issues.less
+++ b/server/sonar-web/src/main/less/components/issues.less
@@ -39,6 +39,11 @@
   border-top-color: transparent;
 }
 
+.issue-inner {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
 .issue-table {
   width: 100%;
 
